fix: delete post